--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -66,6 +66,13 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>org.universAAL.ontology</groupId>
+        <artifactId>ont.pom</artifactId>
+        <version>1.2.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.knx.library</artifactId>
         <version>1.2.0</version>
