Several improvements throughout the artifacts: e.g. added ISO driver for UsageSensor - iso.library extended - improved devicemanager/knximporter
Now default loading UPM-knx project file for testing (216 group addresses - devices)

--- a/lddi.hw.exporter.activityhub/launches/runner/configurations/services/org.ops4j.pax.logging.properties
+++ b/lddi.hw.exporter.activityhub/launches/runner/configurations/services/org.ops4j.pax.logging.properties
@@ -14,9 +14,12 @@ log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{HH:mm:ss.SSS} - %-5p - [%t]  %c - %m%n
 
 # Filter section for loggin depending on the logger category (or package)
+log4j.logger.org.universAAL=INFO, CONSOLE, LOGFILE
 log4j.logger.org.universAAL.context.che=INFO, CONSOLE, LOGFILE
 log4j.logger.org.universAAL.samples.ctxtbus=INFO, CONSOLE, LOGFILE
 log4j.logger.org.universAAL.context.reasoner=INFO, CONSOLE, LOGFILE
 log4j.logger.javax.swing=ERROR, CONSOLE
 log4j.logger.sun.awt=ERROR, CONSOLE
 log4j.logger.java.awt=ERROR, CONSOLE
+
+log4j.logger.org.universAAL.lddi.knx.devicemanager=INFO, CONSOLE
