automatically copy composite file to lauches folder to use lauches folder standalone for running the framework

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ lddi.hw.exporter.activityhub/conf/services/org.universAAL.mw.data.representation
 lddi.hw.exporter.activityhub/data/OfficeProject3.knxproj -text
 lddi.hw.exporter.activityhub/launches/README.txt -text
 lddi.hw.exporter.activityhub/launches/Run.bat -text
+lddi.hw.exporter.activityhub/launches/artifact.composite -text
 lddi.hw.exporter.activityhub/launches/clean.bat -text
 lddi.hw.exporter.activityhub/launches/pax.configuration -text
 lddi.hw.exporter.activityhub/launches/pom.xml -text
