--- a/lddi.hw.exporter.x73/pom.xml
+++ b/lddi.hw.exporter.x73/pom.xml
@@ -82,7 +82,13 @@
           </execution>
         </executions>
       </plugin>
-
+ 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
     </plugins>
   </build>
   <profiles>
@@ -137,7 +143,7 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
-      <artifactId>org.universAAL.ontology.x73</artifactId>
+      <artifactId>ont.iso11073</artifactId>
       <version>1.2.2-SNAPSHOT</version>
     </dependency>
     <dependency>
