--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ lddi.hw.exporter.activityhub/.project
 lddi.hw.exporter.activityhub/.settings
 lddi.hw.exporter.activityhub/log
 lddi.hw.exporter.activityhub/target
+lddi.hw.exporter.x73/.classpath
+lddi.hw.exporter.x73/.project
+lddi.hw.exporter.x73/.settings
+lddi.hw.exporter.x73/launches/runner/bundles
+lddi.hw.exporter.x73/launches/runner/cache
+lddi.hw.exporter.x73/launches/runner/felix/cache
+lddi.hw.exporter.x73/launches/runner/log
+lddi.hw.exporter.x73/target
 lddi.iso11073.library/.classpath
 lddi.iso11073.library/.project
 lddi.iso11073.library/.settings
