--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 * text=auto !eol
+lddi.continua.bluetooth/no_uaal/doc/javadoc.rar -text
+lddi.continua.bluetooth/no_uaal/libraries/x073implementation.jar -text
+lddi.continua.bluetooth/uaal/doc/javadoc.rar -text
 lddi.hw.exporter.activityhub/README.txt -text
 lddi.hw.exporter.activityhub/conf/mw.bus.model.osgi/sodapop.key -text svneol=unset#application/octet-stream
 lddi.hw.exporter.activityhub/conf/services/lddi.knx.devicemanager.properties -text
