--- a/lddi.hw.exporter.x73/pom.xml
+++ b/lddi.hw.exporter.x73/pom.xml
@@ -82,29 +82,57 @@
           </execution>
         </executions>
       </plugin>
-    </plugins>
-  </build>
-  <profiles>
-    <profile>
-      <id>uAAL-Runtime</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.universAAL.middleware</groupId>
-          <artifactId>mw.data.serialization.osgi</artifactId>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>org.apache.felix.http.jetty</artifactId>
-          <version>2.2.0</version>
-        </dependency>
-        <dependency>
-          <groupId>org.apache.felix</groupId>
-          <artifactId>org.apache.felix.webconsole</artifactId>
-          <version>3.1.8</version>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
+      
+      <plugin>
+      	<groupId>org.apache.felix</groupId>
+   		<artifactId>maven-bundle-plugin</artifactId>
+		<extensions>true</extensions>
+		<configuration>
+			<instructions>
+				<Embed-Dependency>
+					unix;scope=compile|runtime;inline=true,
+					utils;scope=compile|runtime;inline=true,
+				</Embed-Dependency>
+				<Export-Package>
+					cx.ath.matthew.unix*,
+					cx.ath.matthew.utils*
+				</Export-Package>
+				<Include-Resource>
+<!-- 					lib, -->
+					src/main/resources
+				</Include-Resource>
+				<Import-Package>*</Import-Package>
+				<Bundle-NativeCode>
+					libunix-java.so;
+					osname=Linux;
+					processor=x86; processor=x86_64
+				</Bundle-NativeCode>
+			</instructions>
+		</configuration>
+	</plugin>
+  </plugins>
+</build>
+<profiles>
+  <profile>
+    <id>uAAL-Runtime</id>
+    <dependencies>
+      <dependency>
+        <groupId>org.universAAL.middleware</groupId>
+        <artifactId>mw.data.serialization.osgi</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.http.jetty</artifactId>
+        <version>2.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.webconsole</artifactId>
+        <version>3.1.8</version>
+      </dependency>
+    </dependencies>
+  </profile>
+</profiles>
   <dependencies>
     <dependency>
       <groupId>org.universAAL.support</groupId>
@@ -158,11 +186,13 @@
 		<groupId>cx.ath.matthew</groupId>
 		<artifactId>unix</artifactId>
 		<version>0.5</version>
+		<scope>compile</scope>
 	</dependency>
 		<dependency>
 		<groupId>cx.ath.matthew</groupId>
 		<artifactId>utils</artifactId>
 		<version>0.2</version>
+		<scope>compile</scope>
 	</dependency>
   </dependencies>
 </project>
