--- a/lddi.hw.exporter.x73/launches/runner/felix/config.ini
+++ b/lddi.hw.exporter.x73/launches/runner/felix/config.ini
@@ -49,7 +49,7 @@ felix.auto.start.5=\
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
 "file:bundles/ont.phWorld_1.2.1.SNAPSHOT.jar" \
-"file:bundles/ont.iso11073_1.2.2.SNAPSHOT.jar" \
+"file:bundles/ont.X73_1.2.1.SNAPSHOT.jar" \
 "file:bundles/wrap_mvn_org.freedesktop.dbus_libdbus-java_2.7_0.jar" \
 "file:bundles/mw.data.serialization.osgi_1.2.1.SNAPSHOT.jar" \
 "file:bundles/wrap_mvn_javax.servlet_servlet-api_2.5_0.jar" \
