--- a/.gitattributes
+++ b/.gitattributes
@@ -695,6 +695,7 @@ lddi.hw.exporter.x73/launches/runner/felix/config.ini -text
 lddi.hw.exporter.x73/launches/runner/felix/system.properties -text
 lddi.hw.exporter.x73/launches/runner/remoteDebug.bat -text
 lddi.hw.exporter.x73/launches/runner/run.bat -text
+lddi.hw.exporter.x73/lib/libunix-java.so -text
 lddi.hw.exporter.x73/pom.xml -text
 lddi.hw.exporter.x73/src/main/java/com/signove/health/agent.java -text
 lddi.hw.exporter.x73/src/main/java/com/signove/health/device.java -text
