--- a/lddi.hw.exporter.x73/launches/runner/configurations/services/org.ops4j.pax.logging.properties
+++ b/lddi.hw.exporter.x73/launches/runner/configurations/services/org.ops4j.pax.logging.properties
@@ -1,5 +1,5 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
-log4j.rootCategory=INFO, CONSOLE, LOGFILE
+log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -14,7 +14,7 @@ log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{HH:mm:ss.SSS} - %-5p - [%t]  %c - %m%n
 
 # Filter section for loggin depending on the logger category (or package)
-log4j.logger.org.universAAL=INFO, CONSOLE, LOGFILE
+log4j.logger.org.universAAL=DEBUG, CONSOLE, LOGFILE
 log4j.logger.org.universAAL.context.che=INFO, CONSOLE, LOGFILE
 log4j.logger.org.universAAL.samples.ctxtbus=INFO, CONSOLE, LOGFILE
 log4j.logger.org.universAAL.context.reasoner=INFO, CONSOLE, LOGFILE
