--- a/lddi.hw.exporter.x73/launches/runner/felix/config.ini
+++ b/lddi.hw.exporter.x73/launches/runner/felix/config.ini
@@ -61,6 +61,7 @@ felix.auto.start.5=\
 "file:bundles/org.apache.felix.http.base_2.2.0.jar" \
 "file:bundles/org.apache.felix.http.jetty_2.2.0.jar" \
 "file:bundles/org.apache.felix.webconsole_3.1.8.jar" \
+"file:bundles/ont.activityhub_1.2.1.SNAPSHOT.jar" \
 "file:bundles/lddi.hw.exporter.x73_1.2.2.SNAPSHOT.jar"
 
 ##############################
