--- a/.gitattributes
+++ b/.gitattributes
@@ -684,6 +684,7 @@ lddi.hw.exporter.x73/.project -text
 lddi.hw.exporter.x73/.settings/org.eclipse.core.resources.prefs -text
 lddi.hw.exporter.x73/.settings/org.eclipse.jdt.core.prefs -text
 lddi.hw.exporter.x73/.settings/org.eclipse.m2e.core.prefs -text
+lddi.hw.exporter.x73/.settings/org.maven.ide.eclipse.prefs -text
 lddi.hw.exporter.x73/launches/Run.bat -text
 lddi.hw.exporter.x73/launches/artifact-test.composite -text
 lddi.hw.exporter.x73/launches/artifact.composite -text
