--- a/lddi.hw.exporter.x73/.settings/org.eclipse.jdt.core.prefs
+++ b/lddi.hw.exporter.x73/.settings/org.eclipse.jdt.core.prefs
@@ -1,3 +1,4 @@
+#Tue Jul 31 13:30:38 CEST 2012
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
 org.eclipse.jdt.core.compiler.compliance=1.5
