--- a/lddi.hw.exporter.x73/launches/runner/felix/config.ini
+++ b/lddi.hw.exporter.x73/launches/runner/felix/config.ini
@@ -26,7 +26,6 @@ felix.auto.start.1=\
 "file:bundles/org.apache.felix.gogo.runtime_0.10.0.jar" \
 "file:bundles/org.apache.felix.gogo.shell_0.10.0.jar"
 felix.auto.start.5=\
-"file:bundles/wrap_mvn_org.osgi_osgi_R4_compendium_1.0_0.jar" \
 "file:bundles/mw.container.xfaces.osgi_1.2.1.SNAPSHOT.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
@@ -43,26 +42,12 @@ felix.auto.start.5=\
 "file:bundles/mw.acl.upnp.osgi_1.2.1.SNAPSHOT.jar" \
 "file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
 "file:bundles/mw.bus.model.osgi_1.2.1.SNAPSHOT.jar" \
-"file:bundles/mw.bus.context.osgi_1.2.1.SNAPSHOT.jar" \
 "file:bundles/mw.bus.service.osgi_1.2.1.SNAPSHOT.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
 "file:bundles/ont.phWorld_1.2.1.SNAPSHOT.jar" \
-"file:bundles/ont.X73_1.2.1.SNAPSHOT.jar" \
-"file:bundles/wrap_mvn_org.freedesktop.dbus_libdbus-java_2.7_0.jar" \
-"file:bundles/mw.data.serialization.osgi_1.2.1.SNAPSHOT.jar" \
-"file:bundles/wrap_mvn_javax.servlet_servlet-api_2.5_0.jar" \
-"file:bundles/org.mortbay.jetty.util_6.1.24.jar" \
-"file:bundles/org.mortbay.jetty.servlet-api_2.5.jar" \
-"file:bundles/org.mortbay.jetty.server_6.1.24.jar" \
-"file:bundles/org.mortbay.jetty.security_6.1.24.jar" \
-"file:bundles/org.apache.felix.http.api_2.2.0.jar" \
-"file:bundles/org.apache.felix.http.base_2.2.0.jar" \
-"file:bundles/org.apache.felix.http.jetty_2.2.0.jar" \
-"file:bundles/org.apache.felix.webconsole_3.1.8.jar" \
-"file:bundles/ont.activityhub_1.2.1.SNAPSHOT.jar" \
-"file:bundles/lddi.hw.exporter.x73_1.2.2.SNAPSHOT.jar"
+"file:bundles/ont.X73_1.2.1.SNAPSHOT.jar"
 
 ##############################
 # System properties
@@ -76,5 +61,6 @@ remoteOBR=
 project.reporting.outputEncoding=UTF-8
 svn.base.url=http://forge.universaal.org/gf/project/support/scmsvn/?path=%2Ftrunk%2F
 project.build.sourceEncoding=Cp1252
+targetJdk=1.5
 maven.compile.target=1.5
 maven.compile.testTarget=1.5
