--- a/lddi.hw.exporter.activityhub/pom.xml
+++ b/lddi.hw.exporter.activityhub/pom.xml
@@ -91,8 +91,8 @@
             <artifact>
               <groupId>org.universAAL.lddi</groupId>
               <artifactId>lddi.knx.devicemanager</artifactId>
-              <!-- nostart>true</nostart -->
-              <startlevel>6</startlevel>
+              <nostart>true</nostart>
+              <!-- <startlevel>6</startlevel> -->
             </artifact>
           </startArtifacts>
         </configuration>
@@ -146,6 +146,13 @@
           <groupId>org.universAAL.lddi</groupId>
           <artifactId>lddi.knx.devicemanager</artifactId>
         </dependency>
+		
+<!-- 		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>ont.X73</artifactId>
+		    <version>1.2.1-SNAPSHOT</version>
+		</dependency> -->
+	
       </dependencies>
     </profile>
   </profiles>
