--- a/.gitattributes
+++ b/.gitattributes
@@ -660,6 +660,7 @@ lddi.hw.exporter.activityhub/launches/runner/configurations/services/org.apache.
 lddi.hw.exporter.activityhub/launches/runner/configurations/services/org.ops4j.pax.logging.properties -text
 lddi.hw.exporter.activityhub/launches/runner/data/LIVING_LAB_LST_WITHdatatypes.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject3.knxproj -text
+lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject5.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/felix/system.properties -text
 lddi.hw.exporter.activityhub/launches/runner/remoteDebug.bat -text
 lddi.hw.exporter.activityhub/launches/runner/run.bat -text
