--- a/lddi.knx.library/pom.xml
+++ b/lddi.knx.library/pom.xml
@@ -69,6 +69,12 @@
       <version>1.0</version>
       <scope>compile</scope>
     </dependency>
+    		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
   <properties>
     <gforge.project.name>lddi</gforge.project.name>
