--- a/lddi.knx.devicemanager/launches/pom.xml
+++ b/lddi.knx.devicemanager/launches/pom.xml
@@ -11,15 +11,15 @@
 	<groupId>org.universAAL.runners</groupId>
 	<artifactId>lddi.knx.devicemanager</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0</version>
+	<version>1.2.2-SNAPSHOT</version>
 	<!-- version is here equal to the level of version of the middleware -->
 	<name>Runner Folder</name>
 
 	<properties>
-		<mw.snapshot.version>1.1.1-SNAPSHOT</mw.snapshot.version>
-		<mw.release.version>1.1.0</mw.release.version>
-		<lddi.snapshot.version>0.0.4-SNAPSHOT</lddi.snapshot.version>
-		<lddi.release.version>1.1.0</lddi.release.version>
+<!--		<mw.snapshot.version>1.1.1-SNAPSHOT</mw.snapshot.version>-->
+<!--		<mw.release.version>1.1.0</mw.release.version>-->
+		<lddi.snapshot.version>1.2.2-SNAPSHOT</lddi.snapshot.version>
+<!--		<lddi.release.version>1.1.0</lddi.release.version>-->
 	</properties>
 	
 	<build>
@@ -88,12 +88,12 @@
 <!--  							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.dependencymanager/3.0.0@nostart</provision>
 							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.devicemanager/0.9.0-SNAPSHOT</provision>
  -->
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.library/${lddi.snapshot.version}@nostart</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.library/${lddi.snapshot.version}@nostart</provision>
 <!-- 							<provision>scan-bundle:mvn:org.universAAL.lddi/iso11073.library/${lddi.snapshot.version}@nostart</provision>
  -->
 <!-- 							<provision>scan-bundle:mvn:org.universAAL.ontology/ont.activityhub/0.0.5-SNAPSHOT</provision>
  -->
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.networkdriver/${lddi.snapshot.version}</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.networkdriver/${lddi.snapshot.version}</provision>
 <!-- 							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.dpt1refinementdriver.iso11073/${lddi.snapshot.version}</provision>
  -->
  <!-- 							<provision>scan-bundle:mvn:org.universAAL.lddi/hw.exporter.activityhub/0.0.3-SNAPSHOT</provision>
@@ -101,7 +101,7 @@
  -->
  							<provision>scan-bundle:wrap:mvn:org.jdom/jdom/1.1.3</provision>
 							<provision>scan-bundle:wrap:mvn:jaxen/jaxen/1.1.3</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.devicemanager/${lddi.snapshot.version}</provision>
+							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.devicemanager/${lddi.snapshot.version}@nostart</provision>
 
  							<provision>scan-bundle:wrap:mvn:javax.servlet/servlet-api/2.5</provision>
 							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty-util/6.1.24</provision>
