renamed property files

--- a/.gitattributes
+++ b/.gitattributes
@@ -762,6 +762,8 @@ lddi.knx.devicemanager/launches/clean.bat -text
 lddi.knx.devicemanager/launches/pax.configuration -text
 lddi.knx.devicemanager/launches/pom.xml -text
 lddi.knx.devicemanager/launches/runner/configurations/mw.bus.model/sodapop.key -text
+lddi.knx.devicemanager/launches/runner/configurations/services/lddi.knx.devicemanager.properties -text
+lddi.knx.devicemanager/launches/runner/configurations/services/lddi.knx.networkdriver.properties -text
 lddi.knx.devicemanager/launches/runner/configurations/services/org.apache.felix.webconsole.internal.servlet.OsgiManager.properties -text
 lddi.knx.devicemanager/launches/runner/configurations/services/org.ops4j.pax.logging.properties -text
 lddi.knx.devicemanager/launches/runner/data/OfficeProject3.knxproj -text
