--- a/lddi.knx.devicemanager/launches/runner/configurations/services/lddi.knx.devicemanager.properties
+++ b/lddi.knx.devicemanager/launches/runner/configurations/services/lddi.knx.devicemanager.properties
@@ -1,2 +1,3 @@
 # Path to XML config file exported by ETS4
-knxConfigFile = data/OfficeProject5.knxproj
+knxConfigFile = data/OfficeProject6.knxproj
+#knxConfigFile = data/LIVING_LAB_LST_WITHdatatypes.knxproj
