--- a/.gitattributes
+++ b/.gitattributes
@@ -754,6 +754,7 @@ lddi.knx.devicemanager/conf/services/lddi.knx.devicemanager.properties -text
 lddi.knx.devicemanager/data/OfficeProject2.knxproj -text
 lddi.knx.devicemanager/data/OfficeProject3.knxproj -text
 lddi.knx.devicemanager/data/OfficeProject5.knxproj -text
+lddi.knx.devicemanager/data/OfficeProject6.knxproj -text
 lddi.knx.devicemanager/launches/README.txt -text
 lddi.knx.devicemanager/launches/Run.bat -text
 lddi.knx.devicemanager/launches/clean.bat -text
