--- a/.gitattributes
+++ b/.gitattributes
@@ -646,6 +646,7 @@ lddi.hw.exporter.activityhub/conf/services/org.ops4j.pax.logging.properties -tex
 lddi.hw.exporter.activityhub/conf/services/org.universAAL.mw.data.representation.properties -text
 lddi.hw.exporter.activityhub/data/OfficeProject3.knxproj -text
 lddi.hw.exporter.activityhub/data/OfficeProject5.knxproj -text
+lddi.hw.exporter.activityhub/data/OfficeProject6.knxproj -text
 lddi.hw.exporter.activityhub/launches/README.txt -text
 lddi.hw.exporter.activityhub/launches/Run.bat -text
 lddi.hw.exporter.activityhub/launches/artifact.composite -text
@@ -662,6 +663,7 @@ lddi.hw.exporter.activityhub/launches/runner/configurations/services/org.ops4j.p
 lddi.hw.exporter.activityhub/launches/runner/data/LIVING_LAB_LST_WITHdatatypes.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject3.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject5.knxproj -text
+lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject6.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/felix/system.properties -text
 lddi.hw.exporter.activityhub/launches/runner/remoteDebug.bat -text
 lddi.hw.exporter.activityhub/launches/runner/run.bat -text
