--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.settings
 lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/target
 lddi.pom/.project
 lddi.pom/.settings
+lddi.pom/composite/.classpath
+lddi.pom/composite/.project
+lddi.pom/composite/.settings
 lddi.pom/composite/target
 lddi.pom/target
 lddi.zigbee.exporter/.classpath
