--- a/lddi.iso11073.library/pom.xml
+++ b/lddi.iso11073.library/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>lddi.iso11073.library</artifactId>
   <version>1.2.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>Java class library for ISO/IEEE 11073 standard</name>
+  <name>universAAL Local Device Discovery and Integration Java class library for ISO/IEEE 11073 standard</name>
   <description>ISO 11073 Device Categories for OSGi DeviceManager are Interfaces for all ISO 11073 sensor types, specifying methods for communication with device services.</description>
   <inceptionYear>2012</inceptionYear>
   <organization>
