--- a/lddi.knx.devicemanager/pom.xml
+++ b/lddi.knx.devicemanager/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>lddi.knx.devicemanager</artifactId>
   <version>1.2.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>KNX device manager</name>
+  <name>universAAL Local Device Discovery and Integration KNX device manager</name>
   <description>This bundle reads KNX device configuration from XML files (exported by ETS4). A OSGI device service is registered in the framework for every KNX device.</description>
   <inceptionYear>2012</inceptionYear>
   <organization>
