--- a/lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/pom.xml
+++ b/lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>lddi.knx.dpt1refinementdriver.iso11073</artifactId>
   <version>1.2.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>KNX Refinement driver for Datapoint Type 1.* to ISO 11073-10471 device</name>
+  <name>universAAL Local Device Discovery and Integration KNX Refinement driver for Datapoint Type 1.* to ISO 11073-10471 device</name>
   <description>Encoding and decoding of KNX Datapoint Types 1.* with Format B1. Is registered as OSGI driver service in the framework registry. This refinement driver maps and creates a suitable device from ISO 11073-10471 specification and registers it in the OSGi registry.</description>
   <inceptionYear>2012</inceptionYear>
   <organization>
