--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 lddi.hw.exporter.activityhub/.classpath
 lddi.hw.exporter.activityhub/.project
 lddi.hw.exporter.activityhub/.settings
+lddi.hw.exporter.activityhub/launches/artifact-test.composite
 lddi.hw.exporter.activityhub/log
 lddi.hw.exporter.activityhub/target
 lddi.hw.exporter.x73/.classpath
