New component: KNX exporter. This component bypasses LDDI abstraction layer and uses KNX devices registered in OSGi as services directly and exports them to uAAL context bus using the brand new device ontology :-)

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@ lddi.knx.devicemanager/.classpath
 lddi.knx.devicemanager/.project
 lddi.knx.devicemanager/.settings
 lddi.knx.devicemanager/target
+lddi.knx.exporter/.classpath
+lddi.knx.exporter/.project
+lddi.knx.exporter/.settings
+lddi.knx.exporter/launches/runner/bundles
+lddi.knx.exporter/launches/runner/cache
+lddi.knx.exporter/launches/runner/deploy-pom.xml
+lddi.knx.exporter/launches/runner/log
+lddi.knx.exporter/target
 lddi.knx.library/.classpath
 lddi.knx.library/.project
 lddi.knx.library/.settings
