--- a/lddi.continua.bluetooth/uaal/samples/ContinuaManager/ContinuaManager/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/ContinuaManager/ContinuaManager/pom.xml
@@ -37,7 +37,9 @@
 							src/main/resources
 						</Include-Resource>	
 						<Import-Package>*</Import-Package>			
-						<Bundle-NativeCode>
+						<Bundle-NativeCode><!--
+						From the BundleNative javadoc: f you have more than one library for the same environment then you 
+						should include all of the libraries for that environment in the same Bundle-NativeCode entry.-->
 							libHDPnative_unix_32.so;
 							osname=Linux;
 							processor=x86; processor=x86_32
