--- a/lddi.zigbee.exporter/pom.xml
+++ b/lddi.zigbee.exporter/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 		<relativePath>../lddi.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>lddi.zigbee.exporter</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.3.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	
 	<!-- ______________________________________________________ -->
@@ -62,22 +62,23 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.lighting</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.device.extra</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.ontology</groupId>
+			<artifactId>org.universAAL.ontology.device</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.weather</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aaloa.zb4osgi</groupId>
@@ -93,6 +94,11 @@
 			<groupId>org.aaloa.zb4osgi</groupId>
 			<artifactId>org.aaloa.zb4osgi.zigbee.basedriver.api</artifactId>
 			<version>0.6.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>it.cnr.isti.uAAL</groupId>
+			<artifactId>it.cnr.isti.uAAL.adapter</artifactId>
+			<version>0.2.1</version>
 		</dependency>
 	</dependencies>
 	
