--- a/.gitattributes
+++ b/.gitattributes
@@ -754,6 +754,8 @@ lddi.hw.exporter.activityhub/launches/runner/data/LIVING_LAB_LST_WITHdatatypes.k
 lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject3.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject5.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject6.knxproj -text
+lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject7.knxproj -text
+lddi.hw.exporter.activityhub/launches/runner/data/OfficeProject8.knxproj -text
 lddi.hw.exporter.activityhub/launches/runner/felix/system.properties -text
 lddi.hw.exporter.activityhub/launches/runner/remoteDebug.bat -text
 lddi.hw.exporter.activityhub/launches/runner/run.bat -text
