--- a/lddi.hw.exporter.activityhub/launches/runner/configurations/services/lddi.knx.devicemanager.properties
+++ b/lddi.hw.exporter.activityhub/launches/runner/configurations/services/lddi.knx.devicemanager.properties
@@ -1,3 +1,4 @@
 # Path to XML config file exported by ETS4
 #knxConfigFile = data/LIVING_LAB_LST_WITHdatatypes.knxproj
-knxConfigFile = data/OfficeProject8.knxproj
+#knxConfigFile = data/OfficeProject8.knxproj
+knxConfigFile = data/LivingLab.knxproj
