--- a/lddi.continua.bluetooth/uaal/libraries/ieee.x73.std/pom.xml
+++ b/lddi.continua.bluetooth/uaal/libraries/ieee.x73.std/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.universAAL.continua</groupId>
   <artifactId>ieee.x73.std</artifactId>
-  <version>1.1.0</version>
+  <version>1.3.1-SNAPSHOT</version>
   <name>IEEE x073 standard implementation</name>
   <description>Java implementation of Continua Health Alliance standard (ISO/IEEE x073)</description>
   <organization>
